--- a/package.json
+++ b/package.json
@@ -9,10 +9,30 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^21.0.0",
+    "@react-native-firebase/messaging": "^21.0.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.11.0",
+    "@react-navigation/stack": "^6.4.1",
+    "@types/react": "~18.2.79",
+    "dayjs": "^1.11.13",
     "expo": "~51.0.28",
+    "expo-device": "^6.0.2",
+    "expo-linear-gradient": "^13.0.2",
+    "expo-notifications": "~0.28.18",
+    "expo-router": "^3.5.23",
+    "expo-speech": "^12.0.2",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.14.1",
+    "is-arrayish": "^0.3.2",
     "react": "18.2.0",
-    "react-native": "0.74.5"
+    "react-native": "^0.74.5",
+    "react-native-notifications": "^5.1.0",
+    "react-native-paper": "^5.12.5",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-tts": "^4.1.1",
+    "react-native-vector-icons": "^10.2.0",
+    "typescript": "~5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
